# NT2102.CH203-ATBMHTTT

./: .gitignore  README.md  final_model.npz  generate_creds.py  pyproject.toml  requirements.txt
certificates/: ca.crt  ca.key  server.key  server.pem
fl-mnist-demo/: client_app.py  server_app.py  task.py
keys/: supernode_credentials_1  supernode_credentials_1.pub  supernode_credentials_2  supernode_credentials_2.pub
